--- a/dart/2주차 다트.md
+++ b/dart/2주차 다트.md
@@ -99,10 +99,10 @@ main() {
   print(john.say());
 }
 ```
-> John is male
-> John is 20
-> John eats pizza
-> John says something
+> John is male<br>
+> John is 20<br>
+> John eats pizza<br>
+> John says something<br>
 
 implements가 사용되면 Person의 모든 변수와 함수가 의무적으로 재정의되어야 한다.
 
@@ -165,10 +165,10 @@ main() {
   print(mike.say());
 }
 ```
-> mike is 22
-> mike eats burger
-> mike is a male
-> mike says nothing
+> mike is 22<br>
+> mike eats burger<br>
+> mike is a male<br>
+> mike says nothing<br>
 
 위처럼 여러 단계의 상속이 필요한 경우 implements가 아니라 extends를 활용하면 된다. mike클래스는 male을 상속하면서 자연스럽게 Person까지 상속받게 되는 것이다.
 
