--- a/dart/2주차 다트.md
+++ b/dart/2주차 다트.md
@@ -175,3 +175,50 @@ main() {
 
 # Extension 확장
 
+효율적인 구조를 위해 사용. 코드 가독성에 도움을 줌.
+
+Extension 사용 안할 경우
+```dart
+class UserIdValidation {
+  static bool isValidLength(String str) {
+    return str.length >= 7 ? true : false;
+  }
+}
+
+void main() {
+  print(UserIdValidation.isValidLength("vkdfaofjaf"));
+  print(UserIdValidation.isValidLength("vkdfaf"));
+}
+```
+> true
+> false
+
+Extension 사용할 경우
+```dart
+extension UserIdValidation on String {
+  bool get isValidLength {
+    return this.length >= 7 ? true : false;
+  }
+}
+
+void main() {
+  print("doifajdfa".isValidLength);
+  print("faioe".isValidLength);
+}
+```
+
+예시 : 두 단어 합치기
+```dart
+extension StringExtension on String {
+  String concatWithSpace(String other) {
+    return '$this $other';  /* 인자로 받는 String과 extend 하는 String은 $ 키워드로 참조해 구분함.
+  }
+}
+
+void main() {
+  print("XimYa".concatWithSpace("Kim"));
+}
+```
+> XimYa Kim
+
+
