--- a/dart/2주차 다트.md
+++ b/dart/2주차 다트.md
@@ -222,3 +222,41 @@ void main() {
 > XimYa Kim
 
 
+# Generic
+List, Set, Map과 같은 컬렉션에서는 <>을 사용하는데 이 부분에 타입 매개변수를 지정한다.
+이것을 매개변수화 타입을 정의한다고 한다.
+
+타입 매개변수는 클래스 생성 시 생성자에서 사용하거나 함수 호출 시 인자로 타입을 전달하기 위해 사용한다.
+```dart
+List<String> colors = List();
+colors.add('Red');
+```
+해당 List에는 String타입만 넣을 수 있다.
+이런식으로 매개변수에 값을 넘겨주듯이 타입을 넘겨줄 수 있는 것이 제네릭의 핵심이다.
+이렇게하면 코드를 중복으로 선언할 필요가 없게된다. 단 하나의 코드로 다양한 타입에 대한 커버가 가능하기 때문이다.
+
+```dart
+void main() {
+  List list = [];
+  
+  void result() {
+    int sum = 0;
+    list.forEach((element) {
+      sum += element;
+    });
+    print(sum);
+  }
+  
+  list.add(1);
+  list.add(2);
+  list.add(3);
+  
+  list.addAll([5, 6, 7]);
+  list.add("value");
+  result();
+}
+```
+> Error: A value of type 'num' can't be assigned to a variable of type 'int'.
+> sum += element;
+위와같은 에러가 발생한다. 정수 사이에 value라는 문자열 값을 넣어놓고는 int형 변수 sum에다가 더하려고 했기 때문이다.
+
