--- a/dart/2주차 다트.md
+++ b/dart/2주차 다트.md
@@ -260,3 +260,81 @@ void main() {
 > sum += element;
 위와같은 에러가 발생한다. 정수 사이에 value라는 문자열 값을 넣어놓고는 int형 변수 sum에다가 더하려고 했기 때문이다.
 
+
+
+다음과 같이 타입 매개변수 자리에 dynamic을 넣는 경우 어떠한 자료형이든 들어갈 수 있다.
+
+```dart
+void main() {
+  List<dynamic> number = new List();
+  
+  number.add(2);
+  number.add('test');
+  number.add(7.4);
+  number.add(addNumber(3, 4));
+  number.add(true);
+  print(number); // [2, test, 7.4, 7, true]
+}
+```
+그러나 제네닉 타입은 가급적 var키워드나 dynamic 키워드를 사용하지말고, 구체적인 타입으로 지정해서 사용하는 것이 바람직하다.
+
+```dart
+void main() {
+  List<String> names = List();
+  
+  // addAll 함수를 사용하면 다양한 요소를 추가할 수 있다
+  names.addAll(['James', 'John', 'Tom']);
+  print(names); 
+}
+```
+
+
+# 고차함수(콜백함수)
+
+다트는 객체지향 언어이므로 함수 자체로도 객체이며 Function이라는 형식을 가진다.
+그렇기에 함수를 값으로 전달하거나 할당역시 가능하다. 이를 고차함수(콜백함수)라고 한다.
+
+## 일급 객체
+다른 객체들에 일반적으로 적용가능한 연산을 모두 지원하는 객체.
+
+조건
+1. 변수에 대입 가능.
+2. 다른 함수에 인자로 전달 받음.
+3. 다른 함수의 결과로서 반환될 수 있음.
+4. int, bool, String, Object, 그리고 함수가 이에 해당됨.
+
+일급 객체로서 함수 사용 예시 -> 콜백 함수 정의 및 전달법
+```dart
+import 'dart:math';
+
+class MyWidget {
+  // 콜백함수 대입 받는 변수 선언
+  final int Function(int, int) callback;
+  
+  // 생성자로 콜백함수 대입
+  MyWidget({required this.callback});
+  
+  int run() {
+    var rng = Random();
+    // 호출 받은 함수에서 콜백함수 호출.
+    return callback(rng.nextInt(100), rng.nextInt(100));
+  }
+}
+
+int sum(int a, int b) {
+  return a + b;
+}
+
+void main() {
+  // 생성자로 콜백함수 넘겨주기
+  var w = MyWidget(callback: sum); // sum() 콜백 함수 정
+  print('My Widget Result: ${w.run()}');  // My Widget Result: 23
+}
+```
+위 예시 코드을 간단히 설명하면 아래와 같다.
+
+1. sum() 콜백 함수를 정의한다.
+2. MyWidget 클래스에 콜백함수를 대입 받는 변수를 final 반환데이터타입<br> Function(매개변수목록) 변수; 형식으로 선언한다.
+3. MyWidget 인스턴스를 생성할 때 생성자로 sum 콜백 함수를 함수 이름(포인터)으로 전달한다. (괄호를 붙이지 않음)
+4. 플러터에서는 위젯에서 이벤트를 전달하고 위젯에서 이벤트가 발생하면 변경된 상태값을 들어올리는(lift) 데 주로 활용되는 기법이다.
+
